yoshimi 1.3.x

2016-3-16 Will
- Fixed regression: LV2 gui now displays correctly again.

2016-3-13 Will
- Minor doc corrections and updates.

2016-3-10 Will
- Reorganised CMakeLists.txt files for better integration with
  different distros, and to recognise LV2_PATH.

2016-3-8 Will
- Bugfix: CMakeLists.txt now recognises both ncurses and ncursesw.
- Bugfix: Default presets were only being set if there were none in
  the .config file, but not if there was no config file!
- Max preset directories set to 128 (same as roots and banks).

2016-3-5 Will
- Console now adds entries at the start.
- matchWord now case insensitve to reference word as well as input.
- More messages can be suppressed.

2016-2-28 Will
- Updated docs.

yoshimi 1.3.9

2016-2-28 Will
- Effect preset number is now included in prompt.
- Removed duplicate instrument "0085-old_pad.xiz from Mysterious bank.
- Set version to 1.3.9 for release.

2016-2-26 Andrew
- Bugfix: in 'main' another GCC6 issue.
- Set version for rc3

2016-2-25 Will
- Bugfix: another GCC6 incompatibility resolved.
- Set version for rc2

2016-2-21 Andrew
- setCurrentRootID properly fixed.

2016-2-21 Will
- Reorganised CLI root and bank commands.
- Implemented creating & deleteing new banks in CLI.
- Bugfix: deleting bank failed if there was no .bankdir file.
- Set version to 1.3.9 rc1.

2016-2-19 Will
- Corrected desktop file.
- Updated docs & screen images.

2016-2-18 Will
- Bugfix: CLI can again list current bank/root.
- Bugfix: on debian testing GUI was locking up if you reduced the ID of the
  last root path in the list.
  

2016-2-17 Will
- Instrument file changes are now individually checked after the attempt
  instead of tested for writability in advance.
- Path window no longer offers save/not on close - always saves.
- Bugfix: above changes didn't update gui correctly :(

2016-2-15 Will
- Fixed regression. Moved bank and history loading back into config.
  Previous change didn't improve startup behaviour and messed with LV2.